# majik4-client-drac

./: AUTHORS  Makefile.in  README  configure  configure.in
src/: MCP.cpp  MCP.h  MError.cpp  MError.h  MKeyboard.cpp  MKeyboard.h  MMap.cpp  MMap.h  MPlayer.cpp  MPlayer.h  MTypes.cpp  MTypes.h  Makefile.am  Makefile.in  main.cpp  majik.dsp  majik.dsw  majik.h  majik.opt  majik.plg  terrain.txt
src/majik_con/: CursesCon.cpp  CursesCon.h  MCon.cpp  MCon.h  Makefile.am  Makefile.in  Win32Con.cpp  Win32Con.h  majik_con.dsp  majik_con.plg
src/majik_net/: MNet.cpp  MNet.h  Makefile.am  Makefile.in  UnixNet.cpp  UnixNet.h  Win32Net.cpp  Win32Net.h  majik_net.dsp  majik_net.plg
src/majik_wait/: CursesWait.cpp  CursesWait.h  MWait.cpp  MWait.h  Makefile.am  Makefile.in  Win32Wait.cpp  Win32Wait.h  majik_wait.dsp  majik_wait.plg
template/: template.c  template.h
